# assembly-stats

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  assembly-stats.cpp  fasta.cpp  fasta.h  fasta_unittest.cpp  fastq.cpp  fastq.h  fastq_unittest.cpp  filetype.cpp  filetype.h  filetype_unittest.cpp  stats.cpp  stats_unittest.cpp
conda/assembly-stats/: build.sh  meta.yaml
config/: CMakeLists-bxzstr.txt.in
include/: stats.h
src/: CMakeLists.txt  assembly-stats.cpp  fasta.cpp  fastq.cpp  filetype.cpp  gtest_main.cpp  stats.cpp
test/: CMakeLists.txt  fasta_unittest.cpp  fastq_unittest.cpp  filetype_unittest.cpp  stats_unittest.cpp
test_files/: fasta_unittest.fasta  fastq_unittest.fastq  filetype_unittest.fasta  filetype_unittest.fastq  filetype_unittest.unknown  stats_unittest.fasta
